<resources>

    <string name="app_name" translatable="false">HalalGuide</string>
    <string name="shop">Shop</string>
    <string name="chat">Chat</string>
    <string name="eat">Eat</string>
    <string name="mosque">Mosque</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="dining">Dining</string>
    <string name="latest_updates">Latest updates</string>
    <string name="danish">Danish</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="none">No language</string>
    <string name="title_activity_location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="groceries">Groceries</string>
    <string name="furniture">Furniture</string>
    <string name="butcher">Butcher</string>
    <string name="afghan">Afghan</string>
    <string name="african">African</string>
    <string name="american">American</string>
    <string name="argentine">Argentine</string>
    <string name="asian">Asian</string>
    <string name="belgian">Belgian</string>
    <string name="brazilian">Brazilian</string>
    <string name="british">British</string>
    <string name="buffet">Buffet</string>
    <string name="burger">Burger</string>
    <string name="bakery">Bakery</string>
    <string name="bagel">Bagel</string>
    <string name="bubbleThea">Bubble Thea</string>
    <string name="cafe">Cafe</string>
    <string name="caribbean">Caribbean</string>
    <string name="cupcake">Cupcake</string>
    <string name="candy">Candy</string>
    <string name="chinese">Chinese</string>
    <string name="dessert">Dessert</string>
    <string name="fish">Fish</string>
    <string name="fruit">Fruit</string>
    <string name="fastFood">FastFood</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="grill">Grill</string>
    <string name="greek">Greek</string>
    <string name="iceCream">Ice Cream</string>
    <string name="juice">Juice</string>
    <string name="kiosk">Kiosk</string>
    <string name="indian">Indian</string>
    <string name="indonesian">Indonesian</string>
    <string name="irish">Irish</string>
    <string name="italian">Italian</string>
    <string name="iranian">Iranian</string>
    <string name="japanese">Japanese</string>
    <string name="kebab">Kebab</string>
    <string name="korean">Korean</string>
    <string name="kosher">Kosher</string>
    <string name="lebanese">Lebanese</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="malaysian">Malaysian</string>
    <string name="moroccan">Moroccan</string>
    <string name="mexican">Mexican</string>
    <string name="nordic">Nordic</string>
    <string name="nepalese">Nepalese</string>
    <string name="pastry">Pastry</string>
    <string name="pakistani">Pakistani</string>
    <string name="persian">Persian</string>
    <string name="pizza">Pizza</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="seafood">Seafood</string>
    <string name="salad">Salad</string>
    <string name="sandwich">Sandwich</string>
    <string name="spanish">Spanish</string>
    <string name="steak">Steak</string>
    <string name="soup">Soup</string>
    <string name="sushi">Sushi</string>
    <string name="tapas">Tapas</string>
    <string name="thai">Thai</string>
    <string name="tibetan">Tibetan</string>
    <string name="turkish">Turkish</string>
    <string name="vegan">Vegan</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="wok">Wok</string>
    <string name="map">Map</string>
    <string name="action_map">Map</string>
    <string name="action_categories">Categories</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_hgfilter">Filter</string>
    <string name="maximum_distance">Maximum distance:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_non_halal">Show non halal meat</string>
    <string name="show_alcohol">Show with alcohol</string>
    <string name="show_pork">Show with pork</string>
    <string name="categories">Kategories:</string>
    <string name="choose">Choose</string>
    <string name="reset">Reset</string>
    <string name="language">Language</string>
    <string name="unlimited">Unlimited</string>
    <string name="title_activity_hgcategory">Category</string>
    <string name="submitterLabel">Submitted by:</string>
    <string name="suggest_change">Suggest change</string>
    <string name="add_review">Add review</string>
    <string name="add_picture">Add picture</string>
    <string name="km">km</string>
    <string name="no_pictures">No pictures for this location</string>
    <string name="no_smileys">There are no smiley reports for this location</string>
    <string name="title_activity_hgsettings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="website">Visit website</string>
    <string name="call">Call the location</string>
    <string name="directions">Get directions</string>
    <string name="favorite_unmark">Remove from favorites</string>
    <string name="favorite_unmark_toast">Removed from favorites</string>
    <string name="favorite_mark_toast">Added to favorites</string>
    <string name="navigation_unavailable">Navigation not available</string>
    <string name="call_unavailable">Call no available</string>

</resources>
