<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.location_details.activities.HGLocationDetailsActivityHG">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/favorite_false"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <!--<item-->
    <!--android:id="@+id/action_suggest_change"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/suggest_change"-->
    <!--app:showAsAction="never" />-->
    <!--<item-->
    <!--android:id="@+id/action_add_review"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/add_review"-->
    <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_add_picture"
        android:orderInCategory="100"
        android:title="@string/add_picture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_directions"
        android:orderInCategory="100"
        android:title="@string/directions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:title="@string/call"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_website"
        android:orderInCategory="100"
        android:title="@string/website"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>
