<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.location.activties.HGFilterActivityHG">


    <TextView
        android:id="@+id/maximum_distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/maximum_distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/maximum_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="5 km"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/maximum_distance_slider"
        style="@style/SeekBarHG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maximum_distance_label"
        android:max="20"
        android:paddingTop="10dp"
        android:progress="0"
        android:secondaryProgress="0" />

    <RelativeLayout
        android:id="@+id/switch_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maximum_distance_slider"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/non_halal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/show_non_halal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/alcohol_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/non_halal_label"
            android:layout_marginTop="10dp"
            android:text="@string/show_alcohol"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/pork_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/alcohol_label"
            android:layout_marginTop="10dp"
            android:text="@string/show_pork"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <Switch
            android:id="@+id/non_halal_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/alcohol_label"
            android:layout_alignLeft="@+id/alcohol_switch"
            android:layout_alignStart="@+id/alcohol_switch"
            android:layout_alignTop="@+id/non_halal_label"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:thumb="@drawable/hg_switch_inner_holo_light"
            android:track="@drawable/hg_switch_track_holo_light" />

        <Switch
            android:id="@+id/alcohol_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/non_halal_switch"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:thumb="@drawable/hg_switch_inner_holo_light"
            android:track="@drawable/hg_switch_track_holo_light" />

        <Switch
            android:id="@+id/pork_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/alcohol_switch"
            android:layout_alignStart="@+id/alcohol_switch"
            android:layout_below="@+id/alcohol_switch"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:thumb="@drawable/hg_switch_inner_holo_light"
            android:track="@drawable/hg_switch_track_holo_light" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_view"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/categories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/categories"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/categories_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/categories_label"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/categories_label"
            android:layout_toRightOf="@+id/categories_label"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/choose"
            style="@style/ButtonHG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="showCategoryView"
            android:text="@string/choose" />

        <Button
            android:id="@+id/reset"
            style="@style/ButtonHG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/choose"
            android:layout_alignBottom="@+id/choose"
            android:layout_toLeftOf="@+id/choose"
            android:layout_toStartOf="@+id/choose"
            android:onClick="resetCategory"
            android:text="@string/reset" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_view" />

</RelativeLayout>
