<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.location_details.activities.HGLocationDetailsActivityHG">

    <ProgressBar
        android:id="@+id/progressBar"
        style="ProgressBarHG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/addressStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addressCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addressStreet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/reviewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addressCity"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reviewRating"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/distanceKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/distance"
        android:text="@string/km"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reviewRating"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/reviewRating"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pork"
            style="@style/HalalGuideImageViewRedTint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pork_true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/alcohol"
            style="@style/HalalGuideImageViewRedTint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alcohol_true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/non_halal"
            style="@style/HalalGuideImageViewRedTint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/non_halal_true"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/space1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/category"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <ImageView
        android:id="@+id/submitterImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/submitterName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space1" />

    <TextView
        android:id="@+id/submitterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:layout_toEndOf="@+id/submitterImage"
        android:layout_toRightOf="@+id/submitterImage"
        android:text="@string/submitterLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/submitterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitterLabel"
        android:layout_toEndOf="@+id/submitterImage"
        android:layout_toRightOf="@+id/submitterImage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/space2"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/submitterImage"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/no_pictures"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/space2"
        android:gravity="center"
        android:text="@string/no_pictures"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pictures"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/space2"/>

    <View
        android:id="@+id/space3"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pictures"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/smileys"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/space3"
        android:drawSelectorOnTop="false"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/no_smileys"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space3"
        android:gravity="center"
        android:text="@string/no_smileys"
        android:visibility="invisible" />


</RelativeLayout>

